objects/OF_TT_Parametri__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>EOF_Giorni_Rip1__c</fullName>
        <label>Giorni Rip1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Giorni_Rip2__c</fullName>
        <label>Giorni Rip2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Num_min_ritorno_in_lavorazione__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Numero di minuti prima dell&apos;appuntamento in cui il ticket ritorna in lavorazione e viene inviata notifica all&apos;OLO</inlineHelpText>
        <label>Numero minuti ritorno in lavorazione</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trouble Ticket - Parametri</label>
</CustomObject>